blockml/test/errors/10_filter/e104/e104d.dashboard
dashboard: e104d
title: 'sales'
fields:
- filter: size
  result: number
  default: '100'

reports:
- title: 'abc'
  model: e104m
  select:
  - a.dim1
  type: table
 


